fixed alignment of dates

--- a/timiresume.css
+++ b/timiresume.css
@@ -30,9 +30,10 @@ body{
 }
 
 .resumedates{
-	margin-top: 5px;
+	margin-top: -15px;
 	margin-bottom: 5px;
 	font-style: italic;
+	margin-left: 40px;
 }
 
 .roles{
